--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
 					<image>
-						<builder>paketobuildpacks/builder-jammy-base:latest</builder>
+						<name>souza11/fiap-checkpoint2</name>
 					</image>
 					<excludes>
 						<exclude>
